# tp-final

./: .gitignore  README.md  pyproject.toml
docs/: refactorizacion.md
examples/: ejemplo.py  test_all_features.py
src/optilens/: __init__.py  core.py  exceptions.py  io.py  utils.py
src/optilens/transforms/: __init__.py  base.py  brightness.py  contrast.py  resize.py  saturation.py  threshold.py  watermark.py
tests/: __init__.py  test_core.py  test_io.py  test_transforms.py
